apps/pgadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  namespace: pgadmin
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: authentik-authentik@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: pgadmin.bisnaguete.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 80
  tls:
    - hosts:
        - pgadmin.bisnaguete.xyz
      secretName: pgadmin-tls
